# taes-attack

./: .gitmodules  README.md  setup.sh
att/: .gitignore  Linkerscript-RAM.lds
att/accuracy_assessment/: Cargo.toml
att/accuracy_assessment/src/: main.rs
att/find_sets/: Cargo.toml
att/find_sets/src/: main.rs
att/io_accuracy/: Cargo.toml
att/io_accuracy/.cargo/: config
att/io_accuracy/src/: main.rs
att/same_set_accuracy_assessment/: Cargo.toml
att/same_set_accuracy_assessment/src/: main.rs
att/test_cache/: Cargo.toml
att/test_cache/src/: main.rs
cw305/: .gitignore  interaction.py  run.sh
cw305/io/: Cargo.toml
cw305/io/src/: lib.rs
gem5/: .gitignore  interaction.py  pulpino.py  run.sh  se_workload.cc.patch  syscall_emul.hh.patch  system.py
gem5/io/: Cargo.toml
gem5/io/src/: lib.rs
io_trait/: Cargo.toml
io_trait/src/: lib.rs
model/: Cargo.toml
model/src/: lib.rs  main.rs
python-srcs/: accuracy_assessment.py  attacks.py  cw305_io.py  find_sets.py  gem5_io.py  io_accuracy.py  io_trait.py  same_set_accuracy_assessment.py  test_cache.py
taes/: Cargo.toml  README.md
taes/src/: lib.rs  reference.rs
